WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
53691
REGRESSION(
r76147
): Slider thumb is not repainted when let go outside of the slider track.
https://bugs.webkit.org/show_bug.cgi?id=53691
Summary
REGRESSION(r76147): Slider thumb is not repainted when let go outside of the ...
Dimitri Glazkov (Google)
Reported
2011-02-03 10:24:52 PST
REGRESSION(
r76147
): Slider thumb is not repainted when let go outside of the slider track.
Attachments
Patch
(7.80 KB, patch)
2011-02-03 10:27 PST
,
Dimitri Glazkov (Google)
tkent
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Dimitri Glazkov (Google)
Comment 1
2011-02-03 10:27:53 PST
Created
attachment 81078
[details]
Patch
Kent Tamura
Comment 2
2011-02-03 15:38:52 PST
Comment on
attachment 81078
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=81078&action=review
> LayoutTests/fast/repaint/slider-thumb-drag-release.html:1 > +<html>
Would you add a comment about what is the expected result please?
Dimitri Glazkov (Google)
Comment 3
2011-02-03 16:06:46 PST
(In reply to
comment #2
)
> (From update of
attachment 81078
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=81078&action=review
> > > LayoutTests/fast/repaint/slider-thumb-drag-release.html:1 > > +<html> > > Would you add a comment about what is the expected result please?
Thanks! Will do.
Dimitri Glazkov (Google)
Comment 4
2011-02-04 10:42:38 PST
Committed
r77644
: <
http://trac.webkit.org/changeset/77644
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug