2011-02-03  Dimitri Glazkov  <dglazkov@chromium.org>

Reviewed by Kent Tamura.

        REGRESSION(r76147): Slider thumb is not repainted when let go outside of the slider track.
        https://bugs.webkit.org/show_bug.cgi?id=53691

        * fast/repaint/slider-thumb-drag-release.html: Added.
        * platform/mac/fast/repaint/slider-thumb-drag-release-expected.checksum: Added.
        * platform/mac/fast/repaint/slider-thumb-drag-release-expected.png: Added.
        * platform/mac/fast/repaint/slider-thumb-drag-release-expected.txt: Added.
2011-02-03  Dimitri Glazkov  <dglazkov@chromium.org>

        Reviewed by Kent Tamura.

        REGRESSION(r76147): Slider thumb is not repainted when let go outside of the slider track.
        https://bugs.webkit.org/show_bug.cgi?id=53691

        Test: fast/repaint/slider-thumb-drag-release.html

        * html/shadow/SliderThumbElement.cpp:
        (WebCore::SliderThumbElement::stopDragging): Added dirtying the layout bit to ensure
            that the thumb is repainted.

Canonical link: https://commits.webkit.org/67715@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77644 268f45cc-cd09-0410-ab3c-d52691b4dbfc